Изменения в программе и добавление фото
Массовые изменения в программе (запятые, тире, кавычки). Добавлены названия одного из двух оставшихся докладов.

Добавлена должность Могилина.
Добавлено фото Пустовита.

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -70,14 +70,14 @@
                                     img(width="40" height="40" src="assets/spk/popov.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Попов Сергей
-                                    .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный бизнес&raquo; ПАО Сбербанк
+                                    .pgmItemSpeakerPos Директор трайба &laquo;Транзакционный бизнес&raquo;, Сбер
 
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Могилин Артем
-                                    //.pgmItemSpeakerPos
+                                    .pgmItemSpeakerPos Лидер трайба &laquo;Особенные решения&raquo;, Сбер
 
 
             .pgmItem
@@ -86,7 +86,7 @@
                 .pgmItemTime 11:10 - 11:40
                 .pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом.
-                    .pgmItemSubTitle Поговорим про то, в каких случах стоит применять продуктовый подход, а когда он не нужен. Расскажу про 4 уровня работы над продуктом, и про то, что необходимо на каждом их этих уровней. Разберем, где чаще всего случаются проблемы и почему.
+                    .pgmItemSubTitle Поговорим про то, в каких случах стоит применять продуктовый подход, а когда он не нужен. Расскажу про четыре уровня работы над продуктом, и про то, что необходимо на каждом их этих уровней. Разберем, где чаще всего случаются проблемы и почему.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -121,14 +121,14 @@
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
                     .pgmItemTitle Как в рутине задач находить время на Disrupt
-                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами, как придумывать новые, подрывные решения и как находить время на Disrupt
+                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами, как придумывать новые, подрывные решения и находить время на Disrupt.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/kesel.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Кесель Иван
-                                .pgmItemSpeakerPos Руководитель направления, Домклик, Сбер
+                                .pgmItemSpeakerPos CPO продуктовой разработки &laquo;Домклик Эксперт&raquo;
 
             .pgmItem
                 .pgmItemIco
@@ -136,7 +136,7 @@
                 .pgmItemTime 12:10 - 12:40
                 .pgmItemContent
                     .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
-                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За 1 год построили полноценную CV-платформу<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
+                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За 1 год построили полноценную CV-платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -151,7 +151,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и самое главное, как на нее влияет клиент.
+                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное,&mdash; как на нее влияет клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -179,13 +179,15 @@
 
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
-                    .pgmItemTitle Ценность исследований
+                    .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и каналов
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на примере особенного сегмента &ndash; людей с инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Артем Могилин" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Могилин Артем
+                                .pgmItemSpeakerPos Лидер трайба &laquo;Особенные решения&raquo;, Сбер
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Павел Попко" src="assets/spk/popko.png")
@@ -200,7 +202,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления.<br>Когда ежедневно отправляешь 300 млн смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления. Когда ежедневно отправляешь 300 000 000 смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -216,7 +218,7 @@
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
                     .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с определенными ограничениями. Среди них: сроки, выбор направления развития, нехватка ресурсов, отношения в команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
+                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с определенными ограничениями. Среди них &ndash; сроки, выбор направления развития, нехватка ресурсов, отношения в команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -278,7 +280,7 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" src="assets/spk/user.png")
+                                img(width="40" height="40" src="assets/spk/pustovit.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Пустовит Александр 
                                 .pgmItemSpeakerPos Партнер в Product.Vision
@@ -304,7 +306,7 @@
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: «Кто должен проводить исследования?», «Как найти время у команды?», «Зачем исследования, если продукт работает?» и другие. В открытом диалоге Владелец продукта и UX-исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
+                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и другие. В открытом диалоге Владелец продукта и UX-исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -326,7 +328,7 @@
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на примере создания онлайн-продукта корпоративного страхования: от идеи к реализации за 3 месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
+                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на примере создания онлайн-продукта корпоративного страхования. От идеи до ее реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
