--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -43,7 +43,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kesel.png")
                     .spkFio Кесель Иван
-                    .spkPos Руководитель направления, Домклик, Сбер
+                    .spkPos CPO продуктовой разработки &laquo;Домклик Эксперт&raquo;
 
                 .spkItem
                     .spkPhoto
@@ -78,7 +78,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
                     .spkFio Могилин Артем
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Лидер трайба &laquo;Особенные решения&raquo;, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -125,7 +125,7 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/pustovit.png")
                     .spkFio Пустовит Александр
                     .spkPos Партнер в Product.Vision
 
