--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -180,7 +180,7 @@
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
                     .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и каналов
-                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на примере особенного сегмента &ndash; людей с инвалидностью.
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на примере особенного сегмента &ndash; людей с инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -218,7 +218,7 @@
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
                     .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с определенными ограничениями. Среди них &ndash; сроки, выбор направления развития, нехватка ресурсов, отношения в команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
+                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с определенными ограничениями. Среди них &ndash; сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -291,7 +291,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV и Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а на примере конкретных кейсов увидим, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений.
+                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а на примере конкретных кейсов увидим, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -306,7 +306,7 @@
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и другие. В открытом диалоге Владелец продукта и UX-исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
+                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и другие. В открытом диалоге Владелец продукта и&nbsp;UX-&nbsp;исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
