Добавление неразрывных пробелов - массовое

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -18,7 +18,7 @@
                                 img(width="40" height="40" alt="Бакурова Ангелина" src="assets/spk/bakurova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Бакурова Ангелина
-                                .pgmItemSpeakerPos Управляющий директор-начальник Офиса Agile-трансформации, Сбер
+                                .pgmItemSpeakerPos Управляющий директор-начальник Офиса&nbsp;Agile-трансформации, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -70,7 +70,7 @@
                                     img(width="40" height="40" src="assets/spk/popov.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Попов Сергей
-                                    .pgmItemSpeakerPos Директор трайба &laquo;Транзакционный бизнес&raquo;, Сбер
+                                    .pgmItemSpeakerPos Директор трайба &laquo;Транзакционный&nbsp;бизнес&raquo;, Сбер
 
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
@@ -86,7 +86,7 @@
                 .pgmItemTime 11:10 - 11:40
                 .pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом.
-                    .pgmItemSubTitle Поговорим про то, в каких случах стоит применять продуктовый подход, а когда он не нужен. Расскажу про четыре уровня работы над продуктом, и про то, что необходимо на каждом их этих уровней. Разберем, где чаще всего случаются проблемы и почему.
+                    .pgmItemSubTitle Поговорим про то, в каких случаях стоит применять продуктовый подход, а когда он не нужен. Расскажу про четыре уровня работы над продуктом и про то, что необходимо на каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и почему.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -120,6 +120,22 @@
 
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
+                    .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
+                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV-платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
+                    .pgmItemSpeakers
+                        .pgmItemSpeaker
+                            .pgmItemSpeakerImg
+                                img(width="40" height="40"  src="assets/spk/pinchuk.png")
+                            .pgmItemSpeakerName
+                                .pgmItemSpeakerFio Пинчук Екатерина
+                                .pgmItemSpeakerPos СРО Layer SberDevices, Исполнительный&nbsp;директор, Сбер
+                    
+
+            .pgmItem
+                .pgmItemIco
+                    include ../svg/mic.svg
+                .pgmItemTime 12:10 - 12:40
+                .pgmItemContent
                     .pgmItemTitle Как в рутине задач находить время на Disrupt
                     .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами, как придумывать новые, подрывные решения и находить время на Disrupt.
                     .pgmItemSpeakers
@@ -128,22 +144,7 @@
                                 img(width="40" height="40" src="assets/spk/kesel.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Кесель Иван
-                                .pgmItemSpeakerPos CPO продуктовой разработки &laquo;Домклик Эксперт&raquo;
-
-            .pgmItem
-                .pgmItemIco
-                    include ../svg/mic.svg
-                .pgmItemTime 12:10 - 12:40
-                .pgmItemContent
-                    .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
-                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За 1 год построили полноценную CV-платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
-                    .pgmItemSpeakers
-                        .pgmItemSpeaker
-                            .pgmItemSpeakerImg
-                                img(width="40" height="40"  src="assets/spk/pinchuk.png")
-                            .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Пинчук Екатерина
-                                .pgmItemSpeakerPos СРО Layer SberDevices, Исполнительный директор, Сбер
+                                .pgmItemSpeakerPos CPO продуктовой разработки &laquo;Домклик&nbsp;Эксперт&raquo;
 
             .pgmItem
                 .pgmItemIco
@@ -151,7 +152,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное,&mdash; как на нее влияет клиент.
+                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное, &mdash; как на нее влияет клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -180,20 +181,20 @@
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
                     .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и каналов
-                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на примере особенного сегмента &ndash; людей с инвалидностью.
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на&nbsp;примере особенного сегмента &ndash; людей с инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Артем Могилин" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Могилин Артем
-                                .pgmItemSpeakerPos Лидер трайба &laquo;Особенные решения&raquo;, Сбер
+                                .pgmItemSpeakerPos Лидер трайба &laquo;Особенные&nbsp;решения&raquo;, Сбер
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Павел Попко" src="assets/spk/popko.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Попко Павел
-                                .pgmItemSpeakerPos Ведущий аналитик команды &laquo;Особенный банк для людей с инвалидностью&raquo;, Дивизион &laquo;Особенные решения&raquo;, незрячий эксперт по цифровой доступности, Сбер
+                                .pgmItemSpeakerPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк&nbsp;для&nbsp;людей&nbsp;с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт&nbsp;по&nbsp;цифровой&nbsp;доступности, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -202,7 +203,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления. Когда ежедневно отправляешь 300 000 000 смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &mdash; Уведомления. Когда ежедневно отправляешь 300 000 000 смс, а твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -225,14 +226,14 @@
                                 img(width="40" height="40" src="assets/spk/kyzmin.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Кузьмин Михаил
-                                .pgmItemSpeakerPos Владелец продукта Открытый Диалог и Сберкрафт, Сбер
+                                .pgmItemSpeakerPos Владелец продукта Открытый Диалог и&nbsp;Сберкрафт, Сбер
 
             .pgmItem
                 .pgmItemIco
                     include ../svg/mic.svg
                 .pgmItemTime 14:50 - 15:20
                 .pgmItemContent
-                    .pgmItemTitle Как не терять деньги на внутренних продуктах/Внутренние продукты: нужен ли вам в зоопарке такой зверь
+                    .pgmItemTitle Как не терять деньги на внутренних продуктах
                     .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об этом говорят. Мы поговорим об основных вопросах, которые волнуют всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -248,14 +249,14 @@
                 .pgmItemTime 15:20 - 15:50
                 .pgmItemContent
                     .pgmItemTitle Вендорозамещение за три месяца
-                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и сократить time-to-market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в условиях нехватки людей и денег? Ответы на эти и другие вопросы в докладе &laquo;Вендорозамещение за три месяца&raquo;.
+                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и сократить time-to-market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в условиях нехватки людей и денег?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/sokolova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Соколова Юлия
-                                .pgmItemSpeakerPos IT-лидер разработки сервисов для маркетологов, Сбер
+                                .pgmItemSpeakerPos IT-лидер разработки сервисов для&nbsp;маркетологов, Сбер
 
 
             .pgmItem
@@ -291,7 +292,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а на примере конкретных кейсов увидим, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений.
+                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а&nbsp;на примере конкретных кейсов увидим, как выйти за рамки своей&nbsp;сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для&nbsp;поиска&nbsp;новых&nbsp;решений.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -306,7 +307,7 @@
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и другие. В открытом диалоге Владелец продукта и&nbsp;UX-&nbsp;исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
+                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -335,7 +336,7 @@
                                 img(width="40" height="40"  src="assets/spk/baryshnikova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Барышникова Елена
-                                .pgmItemSpeakerPos Владелец продукта в Центре Корпоративного Страхования, Сбер
+                                .pgmItemSpeakerPos Владелец продукта в&nbsp;Центре&nbsp;Корпоративного&nbsp;Страхования, Сбер
 
 
             .pgmItem
