--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -15,14 +15,14 @@
                         .spkPhotoWr
                             img(src="assets/spk/bakurova.png")
                     .spkFio Бакурова Ангелина
-                    .spkPos Управляющий директор-начальник Офиса Agile-трансформации, Сбер
+                    .spkPos Управляющий директор-начальник Офиса&nbsp;Agile-трансформации, Сбер
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/baryshnikova.png")
                     .spkFio Барышникова Елена
-                    .spkPos Владелец продукта в Центре Корпоративного Страхования, Сбер
+                    .spkPos Владелец продукта в&nbsp;Центре&nbsp;Корпоративного&nbsp;Страхования, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -43,7 +43,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kesel.png")
                     .spkFio Кесель Иван
-                    .spkPos CPO продуктовой разработки &laquo;Домклик Эксперт&raquo;
+                    .spkPos CPO продуктовой разработки &laquo;Домклик&nbsp;Эксперт&raquo;
 
                 .spkItem
                     .spkPhoto
@@ -71,14 +71,14 @@
                         .spkPhotoWr
                             img(src="assets/spk/kyzmin.png")
                     .spkFio Кузьмин Михаил
-                    .spkPos Владелец продукта Открытый Диалог и Сберкрафт, Сбер
+                    .spkPos Владелец продукта Открытый Диалог и&nbsp;Сберкрафт, Сбер
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
                     .spkFio Могилин Артем
-                    .spkPos Лидер трайба &laquo;Особенные решения&raquo;, Сбер
+                    .spkPos Лидер трайба &laquo;Особенные&nbsp;решения&raquo;, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -92,7 +92,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/pinchuk.png")
                     .spkFio Пинчук Екатерина
-                    .spkPos СРО Layer SberDevices, Исполнительный директор, Сбер
+                    .spkPos СРО Layer SberDevices, Исполнительный&nbsp;директор, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -106,14 +106,14 @@
                         .spkPhotoWr
                             img(src="assets/spk/popko.png")
                     .spkFio Попко Павел
-                    .spkPos Ведущий аналитик команды &laquo;Особенный банк для людей с инвалидностью&raquo;, Дивизион &laquo;Особенные решения&raquo;, незрячий эксперт по цифровой доступности, Сбер
+                    .spkPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк&nbsp;для&nbsp;людей&nbsp;с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт&nbsp;по&nbsp;цифровой&nbsp;доступности, Сбер
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/popov.png")
                     .spkFio Попов Сергей
-                    .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный бизнес&raquo; ПАО Сбербанк
+                    .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный&nbsp;бизнес&raquo; ПАО Сбербанк
 
                 .spkItem
                     .spkPhoto
